chore: normalize